# mini-agent-framework

./: .gitignore  DEVELOPER.md  LICENSE  README.md  app.py  demo_full.py  pyproject.toml
examples/: calculator_project.py  rate_limit_stress_test.py
src/mini_agent/: __init__.py  cli.py
src/mini_agent/config/: settings.py
src/mini_agent/core/: __init__.py  agent.py  orchestrator.py  session_manager.py  tool_loop.py
src/mini_agent/core/memory/: __init__.py  conversation.py  long_term_memory.py
src/mini_agent/core/utils/: __init__.py  action_tracker.py  approval.py  json_utils.py
src/mini_agent/llm/: base.py
src/mini_agent/prompts/: orchestrator_prompt.py  prompt_builder.py
src/mini_agent/providers/: __init__.py  nvidia_provider.py
src/mini_agent/registry/: tools.py
src/mini_agent/registry/browser/: __init__.py  engine.py  exceptions.py  logger.py  models.py  session.py  tool_registry.py
src/mini_agent/registry/builtin/: __init__.py  bash_tool.py  browser_tools.py  data_tools.py  file_tools.py  math_tools.py  system_tools.py  web_tools.py
src/mini_agent/skills/: __init__.py  builtin.py
src/mini_agent/skills/code-review/: code-review.md
src/mini_agent/skills/developer/: developer.md
src/mini_agent/skills/system-design-planning/: system-design-planning.md
tests/: conftest.py  mock_provider.py  test_action_tracker.py  test_agent.py  test_builtin_tools.py  test_conversation.py  test_json_utils.py  test_nvidia_provider.py  test_orchestrator.py  test_real_integration.py  test_session_manager.py  test_skills.py  test_tool_loop.py  test_tools.py
(+20 files in other folders)
